# digit-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  data.py  infer.py  model.py  pyproject.toml  train.py  utils.py
.dvc/: config
config/: config.yaml
data/: df_test.parq.dvc  df_train.parq.dvc  df_val.parq.dvc
