[tool.poetry]
name = "digit-classifier"
version = "0.1.0"
description = ""
authors = ["FK_z11 <rjcnz735@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
pandas = "^2.1.4"
dvc = "^3.36.1"
dvc-gdrive = "^3.0.0"
torch = "^2.1.2"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
pyarrow = "^14.0.2"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
